--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "outDir": "dist",
-        "noImplicitAny": true,
+        "module": "commonjs",
         "strict": true,
-        "module": "NodeNext",
         "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
     }
 }
