--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/.",
     "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "postinstall": "npm run build && cp -R src/views dist/views"
   },
   "keywords": [],
   "author": "",
